<?xml version="1.0" encoding="utf-8"?><!--
/*******************************************************************************
* Copyright (c) 2014 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->
<resources>
    <string name="app_name">Super App</string>
    <string name="action_settings">Settings</string>

    <!-- Generic Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Error messages -->
    <string name="broker_unavailable_check_connectivity">Server is unavailable. Please check your connectivity and try again</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>

    <!-- Menu Actions -->
    <string name="login_label">LOGIN</string>
    <string name="logout_label">Logout</string>

    <string name="iot_label">Tab 2</string>
    <string name="log_label">LOG</string>
    <string name="accel_label">Toggle Accel</string>
    <string name="profiles_label">Profiles</string>
    <string name="clear_profiles_label">Clear Profiles</string>

    <!-- Begin Login Fragment -->
    <string name="showToken_button">Show Auth Token</string>
    <string name="hideToken_button">Hide Auth Token</string>
    <string name="activate_button">Activate Sensor</string>
    <string name="deactivate_button">Deactivate Sensor</string>
    <string name="register_button">Register</string>


    <string name="device_id">DeviceID: -</string>
    <string name="is_connected">Connected to IoT: No</string>

    <string name="organization_hint">Organization ID</string>
    <string name="device_id_hint">Device ID</string>
    <string name="auth_token_hint">Auth Token</string>
    <!-- End Login Fragment -->

    <!-- Begin IoT Fragment -->
    <string name="accel_info">Accelerometer Data</string>
    <string name="accel_x">x: 0.0</string>
    <string name="accel_y">y: 0.0</string>
    <string name="accel_z">z: 0.0</string>
    <string name="lat">lat: 0.0</string>
    <string name="lon">lon: 0.0</string>
    <string name="messages_published">Messages Published: 0</string>
    <string name="messages_received">Messages Received: 0</string>
    <string name="device_id_iot">Username: </string>
    <string name="device_id_iot_value">Device ID</string>
    <string name="send_text">Send Text</string>
    <!-- End IoT Fragment -->

    <!-- Begin Settings Activity CjzROCsBUhZqJnPj)C -->
    <string name="organization_setting">Organization: </string>
    <string name="device_id_setting">Device ID: </string>
    <string name="auth_token_setting">Auth Token: </string>

    <string name="organization_value">3alh1w</string>
    <string name="device_id_value">iot-starter-android</string>
    <string name="auth_token_value">iot-starter-android </string>

    <!--
    <string name="organization_value">y94fbx</string>
    <string name="device_id_value">GP_LOG</string>
    <string name="auth_token_value">a-y94fbx-xa5jgbem9n</string>
-->
    <string name="save_button">Save Settings</string>
    <string name="back_button">Back Button</string>

    <!-- End Settings Activity -->

    <!-- Profiles activity dialog -->
    <string name="save_dialog_title">Save Profile</string>
    <string name="save_dialog_text">Enter a name for the profile.</string>
    <string name="save_dialog_ok">Save</string>

    <!-- Dynamic Forms activity dialog -->
    <string name="save_dynamic_form_title">Save Form</string>
    <string name="save_dynamic_form_text_failure">There are errors on the form.</string>
    <string name="save_dynamic_form_text_success">The form was saved successfully.</string>


    <string name="profile_exists_title">Profile Name Exists</string>
    <string name="profile_exists_text">The profile name you have entered already exists. Overwrite?</string>
    <!-- End Properties activity dialog -->

    <string name="alert_dialog_title">Received Alert</string>

    <!-- IoT Fragment dialog -->
    <string name="send_text_title">Send Text Message</string>
    <string name="send_text_text">Input message text to send.</string>
    <string name="send_text_invalid">Text messages are disabled while connected to QuickStart.</string>
    <!-- End IoT Fragment dialog -->

    <!-- Login Fragment dialog -->
    <string name="connect_props_title">Unable to connect</string>
    <string name="connect_props_text">Organization ID, Device ID and Auth Token must be set in order to connect.</string>
    <string name="title_activity_maps">Map</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- End Login Fragment dialog -->

    <string name="title_activity_location_services">Location Services</string>

    <!-- Map Fragment dialog -->
    <string name="add_location">Add Location</string>
    <string name="recenter">Recenter</string>
    <string name="play_deals_label">Play Deals</string>
    <string name="edit_search_criteria">Edit Search Criteria</string>
    <string name="qrcode_reader">QR Code Reader</string>
    <string name="text_hint">Text Hint</string>
    <string name="button_text">Button Text</string>
    <string name="ocr">OCR</string>
    <string name="find_neighbors">Find Neighbors</string>
    <string name="dynamic_form">Dynamic Form</string>
    <string name="dynamic_table">Dynamic Table</string>
    <string name="select_image">Select Image</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="settings">Settings</string>
    <string name="create_coupon">Create Coupon</string>
    <string name="drive_car">Drive Car</string>


    <string name="sttTitle">IBM Speech to Text</string>
    <string name="sttInstructions">To get started choose an audio model based on the language you will be speaking. Then press Record to transcribe audio.</string>
    <string name="ttsTitle">IBM Text to Speech</string>
    <string name="ttsInstructions">To get started choose a voice that matches the language of the text you will enter below. Enter text and press Speak to hear the results.</string>

    <!-- for Camera2 Code added May 15, 2018 -->
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

    <!-- default model/voice -->
    <string name="modelDefault">en-US_BroadbandModel</string>
    <string name="voiceDefault">en-US_MichaelVoice</string>


    <!-- STT credentials -->
    <string name="STTUsername">9df62676-2685-4849-a1ae-4aed21defe05</string>
    <string name="STTPassword">iaJuSoemTwpJ</string>

    <!-- TTS credentials -->
    <string name="TTSUsername">7e2b27e1-fecd-4825-9394-d1aa61123bb4</string>
    <string name="TTSPassword">nqvewk9Baabz</string>

    <!-- for credentials validation only -->
    <string name="defaultUsername">XXXnqvewk9Baabz</string>
    <string name="defaultPassword">7e2b27e1-fecd-4825-9394-d1aa61123bb4</string>

    <string name="defaultTokenFactory">&lt;token-factory-url&gt;</string>

    <!-- TTS default prompts -->
    <string name="ttsEnglishPrompt">Conscious of its spiritual and moral heritage, the Union is founded on the indivisible, universal values of human dignity, freedom, equality and solidarity; it is based on the principles of democracy and the rule of law. It places the individual at the heart of its activities, by establishing the citizenship of the Union and by creating an area of freedom, security and justice.</string>
    <string name="ttsSpanishPrompt">Consciente de su patrimonio espiritual y moral, la Unión está fundada sobre los valores indivisibles y universales de la dignidad humana, la libertad, la igualdad y la solidaridad, y se basa en los principios de la democracia y el Estado de Derecho. Al instituir la ciudadanía de la Unión y crear un espacio de libertad, seguridad y justicia, sitúa a la persona en el centro de su actuación.</string>
    <string name="ttsFrenchPrompt">Consciente de son patrimoine spirituel et moral, l\'Union se fonde sur les valeurs indivisibles et universelles de dignité humaine, de liberté, d\'égalité et de solidarité; elle repose sur le principe de la démocratie et le principe de l\'État de droit. Elle place la personne au coeur de son action en instituant la citoyenneté de l\'Union et en créant un espace de liberté, de sécurité et de justice.</string>
    <string name="ttsItalianPrompt">Consapevole del suo patrimonio spirituale e morale, l\'Unione si fonda sui valori indivisibili e universali della dignità umana, della libertà, dell\'uguaglianza e della solidarietà; essa si basa sul principio della democrazia e sul principio dello Stato di diritto. Pone la persona al centro della sua azione istituendo la cittadinanza dell\'Unione e creando uno spazio di libertà, sicurezza e giustizia.</string>
    <string name="ttsGermanPrompt">In dem Bewusstsein ihres geistig-religiösen und sittlichen Erbes gründet sich die Union auf die unteilbaren und universellen Werte der Würde des Menschen, der Freiheit, der Gleichheit und der Solidarität. Sie beruht auf den Grundsätzen der Demokratie und der Rechtsstaatlichkeit. Sie stellt den Menschen in den Mittelpunkt ihres Handelns, indem sie die Unionsbürgerschaft und einen Raum der Freiheit, der Sicherheit und des Rechts begründet.</string>
    <string name="ttsJapanesePrompt">精神的、そして道徳的な遺産を意識的に受け継いで、人間の尊厳、自由、平等、連帯の不可分で普遍的な価値を大前提として連合は設立される。すなわち、連合は民主主義と法治の原則に立脚する。連合は市民権を確立し、自由と安全、正義が確保された地域を創造することによって、その組織活動の中心に個人を置く。</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_confirm_ocrscan">ConfirmOCRScan</string>
    <string name="default_notification_channel_id">1</string>
</resources>
